Added basic classes

--- a/MilkShakes/MilkShakes.csproj
+++ b/MilkShakes/MilkShakes.csproj
@@ -188,6 +188,10 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\Entities\Fruit.cs" />
+    <Compile Include="Models\Entities\Milk.cs" />
+    <Compile Include="Models\Entities\Milkshake.cs" />
+    <Compile Include="Models\Entities\MilkshakeDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
