--- a/MilkShakes/Web.config
+++ b/MilkShakes/Web.config
@@ -9,7 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MilkShakes-20141121102245;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MilkShakes-20141121102245.mdf" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(localDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MilkShakes.mdf;Initial Catalog=MilkShakes;Integrated Security=True" providerName="System.Data.SqlClient" />
+
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
